# Cupsm

./: CMakeLists.txt  main.cpp  main_back.cpp
src/: CMakeLists.txt
src/commands/: CMakeLists.txt  command.cpp  command.h
src/constants/: CMakeLists.txt  constants.cpp  constants.h
src/service/: CMakeLists.txt  UploadService.cpp  UploadService.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
